--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="s1">
-      <div><h3 class="logo"><a href=""> KONRECEPT </a></h3></div>
+      <div><h3 class="logo"><a href="LÄGG URL"> KONRECEPT </a></h3></div>
       <div> </div>
       <div> <button class="knappgul"> Kontakta oss </button> </div>
       <div>  </div>
@@ -25,7 +25,7 @@
           <div class="receptpan">
             <h2>Pannkakor</h2>
           <br>    
-          <a href="https://www.ica.se/recept/pannkakor-grundsmet-2083/">
+          <a href="LÄGG URL">
           <button class="knappsvart"> Visa Recept </button>
           </a> 
           <placeholder></placeholder>
@@ -40,7 +40,7 @@
         <div class="recept">
           <h2>Äggröra</h2>
           <br>
-            <a href="https://www.ica.se/recept/lyxig-aggrora-713644/">
+            <a href="LÄGG URL">
               <button class="knappgul">Visa Recept</button>
             </a>
           </div>
@@ -58,7 +58,7 @@
              <div class="receptkimchi">
                <h2>Kimchi Pasta</h2>
              <br>    
-             <a href="https://www.ica.se/recept/pannkakor-grundsmet-2083/">
+             <a href="LÄGG URL">
              <button class="knappsvart"> Visa Recept </button>
              </a> 
              <placeholder></placeholder>
