--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uppgift3</title>
+    <title>Konrecept</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="jsc.js">
     </script>
@@ -16,7 +16,7 @@
       <div> </div>
       <div> <button class="knappgul"> Kontakta oss </button> </div>
       <div>  </div>
-        <h1 class="titel"> VÅRA RECEPT &#8595;</h1>
+        <h1 class="titel"> VÅRA RECEPT (lägg till URL) &#8595;</h1>
       </section>
       <section>
         <div class="container reveal">
