--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="s1">
-      <div><h3 class="logo"><a href="LÄGG URL"> KONRECEPT </a></h3></div>
+      <div><h3 class="logo"><a href="https://oliwierkon.github.io/KonreceptMain/"> KONRECEPT </a></h3></div>
       <div> </div>
       <div> <button class="knappgul"> Kontakta oss </button> </div>
       <div>  </div>
