--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div> </div>
       <div> <button class="knappgul"> Kontakta oss </button> </div>
       <div>  </div>
-        <h1 class="titel"> VÅRA RECEPT (lägg till URL) &#8595;</h1>
+        <h1 class="titel"> VÅRA RECEPT&#8595;</h1> 
       </section>
       <section>
         <div class="container reveal">
@@ -25,7 +25,7 @@
           <div class="receptpan">
             <h2>Pannkakor</h2>
           <br>    
-          <a href="LÄGG URL">
+          <a href="https://oliwierkon.github.io/ReceptSida/">
           <button class="knappsvart"> Visa Recept </button>
           </a> 
           <placeholder></placeholder>
@@ -41,7 +41,7 @@
           <h2>Äggröra</h2>
           <br>
             <a href="LÄGG URL">
-              <button class="knappgul">Visa Recept</button>
+              <button class="knappgul">FUNGERAR EJ</button>
             </a>
           </div>
             <placeholder></placeholder>
@@ -59,7 +59,7 @@
                <h2>Kimchi Pasta</h2>
              <br>    
              <a href="LÄGG URL">
-             <button class="knappsvart"> Visa Recept </button>
+             <button class="knappsvart"> FUNGERAR EJ </button>
              </a> 
              <placeholder></placeholder>
             </div>
