--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="s1">
       <div><h3 class="logo"><a href="https://oliwierkon.github.io/KonreceptMain/"> KONRECEPT </a></h3></div>
       <div> </div>
-      <div> <button class="knappgul"> Kontakta oss </button> </div>
+      <div> <button class="knappgul"><a href="mailto:oliwier.kondratowicz@elev.ga.ntig.se">Kontakta oss<a></button> </div>
       <div>  </div>
         <h1 class="titel"> VÅRA RECEPT&#8595;</h1> 
       </section>
@@ -40,7 +40,7 @@
         <div class="recept">
           <h2>Äggröra</h2>
           <br>
-            <a href="LÄGG URL">
+            <a href="">
               <button class="knappgul">FUNGERAR EJ</button>
             </a>
           </div>
@@ -58,7 +58,7 @@
              <div class="receptkimchi">
                <h2>Kimchi Pasta</h2>
              <br>    
-             <a href="LÄGG URL">
+             <a href="">
              <button class="knappsvart"> FUNGERAR EJ </button>
              </a> 
              <placeholder></placeholder>
