--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="s1">
       <div><h3 class="logo"><a href="https://oliwierkon.github.io/KonreceptMain/"> KONRECEPT </a></h3></div>
       <div> </div>
-      <div> <button class="knappgul"><a href="mailto:oliwier.kondratowicz@elev.ga.ntig.se">Kontakta oss<a></button> </div>
+      <div> <button class="knappgul">Funkar Ej</button> </div>
       <div>  </div>
         <h1 class="titel"> VÅRA RECEPT&#8595;</h1> 
       </section>
